--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,7 +12,7 @@
         <div class="col-md-12">
           <div class="jumbotron">
             <h1 class="display-4">Hello, {{ name }}</h1>
-            <p class="lead">This is a simple site, a simple from mfikri.com.</p>
+            <p class="lead">This is a simple site, a simple from Scratch.</p>
             <hr class="my-4">
             <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
           </div>
